setting up github pages site

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import spacejam.Dual as d\n",
@@ -141,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "125.00 + e 75.00"
+       "125.00 + eps 75.00"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,21 +183,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "125.0\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 125.00\n",
+    "print('123')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "75.0\n"
      ]
     }
    ],
    "source": [
-    "print(ad.r) # real part f(x=p)\n",
-    "print(ad.d) # dual part df/dx|x=p"
+    "print(ad.d) # dual"
    ]
   },
   {
@@ -244,20 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "26.80 + eps [ 6.64 10.2 ]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26.80 + eps [ 6.64 10.2 ]\n"
+     ]
     }
    ],
    "source": [
@@ -273,16 +290,8 @@
     "\n",
     "# print f(p) and grad(f) evaluated at p\n",
     "ad = f(p_x1, p_x2)\n",
-    "ad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "26.80 + e [ 6.64 10.2 ]"
+    "\n",
+    "print(ad)"
    ]
   },
   {
@@ -294,21 +303,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.80 + eps [ 6.64 10.2 ]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.8\n",
-      "[ 6.64 10.2 ]\n"
+      "26.8\n"
      ]
     }
    ],
    "source": [
-    "print(ad.r)\n",
-    "print(ad.d)"
+    "print(ad.r)"
    ]
   },
   {
@@ -353,17 +380,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5.00 + e [4. 1.], 9.00 + e [10. 12.], 29.00 + e [ 1. 48.]],\n",
+       "array([5.00 + eps [4. 1.], 9.00 + eps [10. 12.], 29.00 + eps [ 1. 48.]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +432,7 @@
        "       [ 1., 48.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,6 +443,25 @@
     "    Jac[i] = f.d\n",
     "\n",
     "Jac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.  1.]\n",
+      " [10. 12.]\n",
+      " [ 1. 48.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Jac)"
    ]
   },
   {
