docs: updated astro section

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -192,27 +192,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### s = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 273,
+   "metadata": {},
    "outputs": [
     {
      "ename": "SystemExit",
-     "evalue": "\nSorry, spacejam did not converge for s=0 A-M method.\nTry adjusting X_tol or i_tol.",
+     "evalue": "\nSorry, spacejam did not converge for s=0 A-M method.\nTry adjusting X_tol, i_tol, or using another integrator.",
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m \nSorry, spacejam did not converge for s=0 A-M method.\nTry adjusting X_tol or i_tol.\n"
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m \nSorry, spacejam did not converge for s=0 A-M method.\nTry adjusting X_tol, i_tol, or using another integrator.\n"
      ]
     },
     {
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -390,12 +386,14 @@
     "\n",
     "ax.legend()\n",
     "\n",
-    "plt.savefig('spacejam/docs/source/_static/s1.png', dpi=200, bbox_inches='tight')"
+    "plt.savefig('spacejam/docs/source/_static/s0.png', dpi=200, bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### HTML"
    ]
@@ -403,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
