docs: updated previous issues

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -20,6 +20,58 @@
    "metadata": {},
    "source": [
     "## Optional Plotting Configs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# relationship beteen time and step (N*h = T)\n",
+    "# h: timestep\n",
+    "# N: total number of steps\n",
+    "# T: total time\n",
+    "\n",
+    "# Initial conditions\n",
+    "h = 0.01\n",
+    "N = 500\n",
+    "T = h*N\n",
+    "X = np.zeros(N)\n",
+    "X[0] = 1\n",
+    "t = np.arange(0, T, h)\n",
+    "\n",
+    "# toy function\n",
+    "def f(x):\n",
+    "    f1 = -x\n",
+    "    return np.array([f1])\n",
+    "\n",
+    "# analytic solution\n",
+    "def analytic(t): #t=np.arange(0, T=5, h=0.01)\n",
+    "    x = np.exp(-t)\n",
+    "    return x\n",
+    "\n",
+    "# the X_test is the analytical result\n",
+    "X_test = analytic(t)\n",
+    "\n",
+    "# run simulation for Adams-Moulton order 0\n",
+    "for n in range(N-1):\n",
+    "    X[n+1] = sj.integrators.amso(f, np.array([X[n]]), h=h, i_tol=2)\n",
+    "\n",
+    "tol_0 = 0.0032 \n",
+    "diff_0 = np.abs(X[-1] - X_test[-1]) #X[-1]==0.009920974201040624, X_test[-1]==0.006805664492230543\n",
+    "diff_0 < tol_0"
    ]
   },
   {
