docs: fixed typos

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -24,18 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SystemExit",
+     "evalue": "\nSorry, spacejam did not converge for s=0 A-M method.\nTry adjusting X_tol, i_tol, or using another integrator.",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m \nSorry, spacejam did not converge for s=0 A-M method.\nTry adjusting X_tol, i_tol, or using another integrator.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mango/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3275: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
     }
    ],
    "source": [
@@ -67,11 +74,29 @@
     "\n",
     "# run simulation for Adams-Moulton order 0\n",
     "for n in range(N-1):\n",
-    "    X[n+1] = sj.integrators.amso(f, np.array([X[n]]), h=h, i_tol=2)\n",
+    "    X[n+1] = sj.integrators.amso(f, np.array([X[n]]), h=h, X_tol=1E-6, i_tol=0)\n",
     "\n",
     "tol_0 = 0.0032 \n",
     "diff_0 = np.abs(X[-1] - X_test[-1]) #X[-1]==0.009920974201040624, X_test[-1]==0.006805664492230543\n",
-    "diff_0 < tol_0"
+    "diff_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytest.as"
    ]
   },
   {
